--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "relevelgit",
   "version": "1.0.0",
   "description": "E-Commerce Website",
-  "main": "express_server.js",
+  "main": "sequelize.main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +19,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.23.1"
   }
 }
